Customized tags and Email.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: index
-title: place_your_blog_title_here
+title: YANG Shiliang's Blog
 ---
 
 <article id="post__content">
-  <h1 id="post__title">Welcome</h1>
+  <h1 id="post__title">欢迎来到杨世梁的博客</h1>
+  <h1 id="post__title">Welcome to YANG Shiliang's Blog</h1>
 </article> <!-- end #post__content -->
